--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <div class="work-description">
         <h3>01 Restaurants Website</h3>
         <p>
-            A rental platform project allowing users to view and manage
-            rental listings. Built using HTML and CSS fundamentals while
-            learning web development.
+           A restaurant platform project that allows users to explore, book, and order from restaurants online. 
+    Built using HTML and CSS, this project demonstrates the fundamentals of web development while 
+    creating a user-friendly interface for restaurant browsing and booking.
         </p>
     </div>
 </section>
@@ -77,7 +77,8 @@
     <h3>Education</h3>
     <p>
         +2 Running (Computer Science)<br>
-        Kanjirowa National Secondary School
+        Kanjirowa National Secondary School<br>
+        Koteshwor-32, Kathmandu
     </p>
 </section>
 
@@ -88,7 +89,7 @@
     <div class="contact-info">
         <p><b>Name:</b> Nitesh Neupane</p>
         <p><b>Email:</b> neupanenitesh26@gmail.com</p>
-        <p><b>Address:</b> Budhanagar</p>
+        <p><b>Contact no.:</b> +977-966727385</p>
     </div>
 </section>
 
